--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,1 +1,55 @@
+.navbar {
+  color: white;
+  border-bottom: 1px solid rgba($color: rgb(247, 247, 247), $alpha: 0.5);
+  background-color: rgba(0, 0, 0, .4);
+  border-top: 3px solid gold;
+  padding: 0;
+  margin: 0;
+}
 
+.navbar-toggler {
+  margin: 10px;
+}
+
+.navbar-collapse {
+  margin: 0;
+}
+
+.nav-link-bottom {
+  color: white;
+}
+
+.nav-link-bottom:hover {
+  background-color: rgba(0, 0, 0, .8);
+}
+
+.dropdown-menu {
+  background-color: rgba(0, 0, 0, .7);
+}
+
+.nav-link {
+  padding: 10px;
+}
+
+
+.nav-link-top {
+  padding: 20px;
+  margin: 0;
+}
+
+.nav-link-top:hover {
+  box-shadow: inset -1px -19px 43px -4px rgba(0, 0, 0, .35);
+  transition: background .5s ease-in;
+}
+
+a {
+  color: white;
+}
+
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.custom-toggler.navbar-toggler {
+  border-color: white;
+}
