--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -1,1 +1,9 @@
-<app-monster-listing [userid]="userid"></app-monster-listing>
+<div class="row">
+
+  <div class="col-sm">
+    <app-monster-listing [userid]="userid"></app-monster-listing>
+  </div>
+  <div class="col-sm">
+    <app-compendium-listing [userid]="userid"></app-compendium-listing>
+  </div>
+</div>
